# squirreldisk

./: package-lock.json  package.json
scripts/: update-pdu.sh
src/: App.tsx  chartColors.ts  d3chart.ts  index.d.ts  main.tsx  pruneData.test.ts  pruneData.ts  scanCache.ts  scanTime.test.ts  scanTime.ts  style.css  treeMutations.test.ts  treeMutations.ts  window.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/src/: main.rs  scan.rs  snapshots.rs  window_style.rs
src/components/: DiskDetail.tsx  DiskItem.tsx  DiskList.tsx  FileLine.tsx  ParentFolder.tsx  TitleBar.tsx
